--- a/matlib/README.org
+++ b/matlib/README.org
@@ -1,16 +1,20 @@
-This is the text of ANSYS-Mode's README for the matlib/ directory, it
-is best read in Emacs's Org mode.
+* This is the text of ANSYS-Mode's README.org for the matlib/ directory
+  Its text is best read in Emacs' Org mode.
 
-Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
+  Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
-If not indicated in the file name, the material properties are for
-room temperature.
+  If not indicated otherwise in the file name, material properties are
+  linear and for room temperature.
 
-- creep_curves_PPS_Fortron1140l4_120degC.csv :: A 40 % short glas
-     fibre filled PPS.  The stress - creep strain curves are scaled
-     with a factor of 0.8 from test specimen to account for a random
-     fibre orientation in thick walled parts.  They might be used as
-     an example for data fitting with the TBFT command.
+  - PPS.MPA_MPL :: Celanese Fortron 1140L4 40 % glass fibre, Young's
+                   modulus 80 % reduced compared to test specimen to
+                   replicate a random fibre orientation.
+
+  - creep_curves_PPS_Fortron1140l4_120degC.csv :: A 40 % short glas
+       fibre filled PPS.  The stress - creep strain curves are scaled
+       with a factor of 0.8 from test specimen to account for a random
+       fibre orientation in thick walled parts.  They might be used as
+       an example for data fitting with the TBFT command.
 
 
 # local variables:
