--- a/TODO.org
+++ b/TODO.org
@@ -25,7 +25,9 @@
   - Completion :: Of parametric function parentheses
 		  completes redundant closing parentheses
   - Completion :: A mouse selection from the *ANSYS-completion* buffer
-                  is only inserted upcased.
+                  is only inserted upcased.  Mouse completion is
+                  working with middle mouse button but only on the
+                  second LMB.
   - Completion :: ANSYS command 'C***' will not be completed
   - Skeleton :: Mouse selection of -structural-template does not work
                 (because of stipulated user text input from this skeleton)
@@ -33,37 +35,38 @@
                    (M-{ does it though))
 * 16.1.2:
 ** Bugs
-   - path construction in -mode.el for help program is not working, if
-     ansys-mode is not activated! <- autoloaded functions
    - *mwrite
      *cfclos
      M-? shows help for *mwrite, when cursor behind *cfclos and in the
      last line without \n
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
+   - path construction in -mode.el for help program is not working, if
+     ansys-mode is not activated!? <- autoloaded functions, should
+     work they are calling -mode.el!
 ** Wish-list
+   - Add WorkBench (Aim) concepts to APDL translation in A-M_APDL_reference
    - -show-command-parameters is not dynamically updated in the first line
    - Correct the creep data together with young's modulus and total
      strain to creep strain!
    - GH-pages with tutorials
+   - add bbdb files to emacs packages?
    - variables behind / and * without whitespace in between are not
      highlighted! try changing the character syntax???
    - C-c C-a does not take signs (e.g. +13, -8) befor numbers into account
    - implement -hide-region also for rotated nodes in WB .dat files
      (frictionless support)
    - Targeting AnsysClassics (-send-to-ansys) AND ANSYS Aim
-   - Add WorkBench (Aim) concepts to APDL translation in A-M_APDL_reference
    - show defaults for -license-file, license-utility and -ansysli-servers
    - *msg command's format string is not higlighted (-template-element-table)
    - Variables are not highlighted in -skeletons, it is specified in
      -mode only for files with .mac suffix; *create file tmp,mac:
      macro call: tmp, is not highlighted
-   - makefile errors when doing -fontification.el
+   - makefile errors when doing -fontification.el?
    - ansys-template.el:85:13:Warning: reference to free variable
      `ansys-skeleton-overlay'
    - mouse-choose-completion is obsolete since E23.2
    - example of an ansyslmd.ini?
-   - add bbdb files to emacs packages?
    - add timer customisation for -command-parameter-help variable 1
      min, 2 min, etc.
    - example.mac: make it solver compatible
@@ -75,13 +78,13 @@
      here is the tanslation of names to html files:
      - link to ANSYS-Mode APDL reference:
      - Chapters of structural APDL documentation:
-   - -dynamic-highlighting is sluggish, highlighting somehow
-     retarded!!! Still??
    - TODOS: in fontification.org
      - deletion of vectors *del,Vector without request? ,,nopr?
      - check character variables 32 Chars. and highlight accordingly
        string 128, char 8
      - *vscfun: mean, stdev, ...
+   - -dynamic-highlighting is sluggish, highlighting somehow
+     retarded!!! Still??
    - _RETURN (-mode) somewhat milder red, clashes with reseved vars!
    - test server specifications (menu!) make interconnect
      conditional of the ANSYS version >= 120
@@ -114,6 +117,7 @@
        completable, whitespace problem befor paren...
        and: "nele" undocumented command and function nelem()
    - inconsistencies in A-M_introductory_tutorial.org
+     - the parameter help overlay is dated
      - in variable.png symbols Ns and Ls are not highlighted as
        variables
      - change sequence of alignment.png first not aligned, second aligned
@@ -134,7 +138,8 @@
   - check whether all undocumented commands
     [[elisp:(find-tag "Ansys_undocumented_commands")]]
     are still working in V 16.2
-  - TODOs, FIXMEs in the code
+  - (tags-search "TODO")
+  - (tags-search "FIXME")
   - checkdoc, -template.el, -process.el, -mode.el done except
     \\<keymap> & \\[function]
   - README -- installation (Emacs Wiki format) and accompanying files,
