--- a/doc/A-M_introductory_tutorial.org
+++ b/doc/A-M_introductory_tutorial.org
@@ -293,7 +293,7 @@
 #+ATTR_LaTeX: :height 7.5cm
   [[./calculator.png]]
 
-** Debug your code interactively with the solver ([[http://www.gnu.org/gnu/why-gnu-linux.html][GNU/Linux]])
+** Debug your code interactively with the solver ([[http://www.gnu.org/gnu/why-gnu-linux.html][GNU-Linux]])
    You can run the ANSYS solver under Emacs and send code lines from
    above APDL window with *C-c C-j* (*C-c C-c* for whole regions)
    directly to this process. Below you see the *interactive* solver
@@ -302,7 +302,7 @@
 #+ATTR_HTML: :width "1200"
 #+ATTR_LaTeX: :height 6.5cm
   [[./process.png]]
-** Display the license status and preview images on GNU/Linux
+** Display the license status and preview images on GNU-Linux
    In Emacs' mid-section you see the license state (*C-c C-l*)
    and left Emacs window (below) a thumbnail view of images from a
    folder.
@@ -312,7 +312,7 @@
    [[./license.png]]
 
 ** Arrange the ANSYS-Mode windows to your needs
-   The image shows an Emacs 23.2 frame (in reversed colour mode and compiled with the GTK+ toolkit under GNU/Linux) with a ripped off ANSYS-Mode menu field
+   The image shows an Emacs 23.2 frame (in reversed colour mode and compiled with the GTK+ toolkit under GNU-Linux) with a ripped off ANSYS-Mode menu field
 
 # The
 # APDL file is in the right window with the (experimental) user variable
@@ -437,7 +437,7 @@
 #         :BEAMER_col: 0.5
          :END:
     Solver communication/feedback - hybrid between coding and
-    debugging (GNU/Linux only), retrieving license states, error file
+    debugging (GNU-Linux only), retrieving license states, error file
     viewing, abort file handling, extending APDL templates, ...
 ** Last slide of the ANSYS-Mode tutorial
 ***  Hint for the curious:
