--- a/matlib/README.org
+++ b/matlib/README.org
@@ -1,4 +1,18 @@
-* This is the text of ANSYS-Mode's README.org for the matlib/ directory
+#+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
+#+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
+#+OPTIONS: e:t email:nil f:t inline:t num:t p:nil pri:nil prop:nil
+#+OPTIONS: stat:t tags:t tasks:t tex:t timestamp:t toc:t todo:t |:t
+#+AUTHOR: H. Dieter Wilhelm
+#+EMAIL: dieter@duenenhof-wilhelm.de
+#+DESCRIPTION:
+#+KEYWORDS:
+#+LANGUAGE: en
+#+SELECT_TAGS: export
+#+EXCLUDE_TAGS: noexport
+#+CREATOR: Emacs 24.5.1 (Org mode 8.2.10)
+
+#+STARTUP: showall
+#+TITLE: This is the text of ANSYS-Mode's README.org for the matlib/ directory
   Its text is best read in Emacs' Org mode.
 
   Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
@@ -6,20 +20,71 @@
   If not indicated otherwise in the file name, material properties are
   linear and for room temperature.
 
+* Usage in an APDL file
+  Specify the material library to read from:
+  #+BEGIN_SRC emacs-lisp
+  /mplib,read,/HOME/uidg1626/a-m/matlib
+  /mplib,stat !show the material directories
+  !! which materials are acutally in the material library?
+  /sys,ls ~/a-m/matlib
+  #+END_SRC
+
+  You have to indicate the unit system.
+
+  - SI — International system (m, kg, s, K).
+  - MKS — MKS system (m, kg, s, °C).
+  - uMKS — μMKS system (μm, kg, s, °C).
+  - CGS — CGS system (cm, g, s, °C).
+  - MPA — MPA system (mm, Mg, s, °C).
+  - BFT — U. S. Customary system using feet (ft, slug, s, °F).
+  - BIN — U. S. Customary system using inches (in, lbf*s2/in, s, °F).
+
+  For example:
+#+BEGIN_SRC emacs-lisp
+   /units,mpa !indicate MPA system for subsequent material definitions
+   mpread,St37,,,lib
+#+END_SRC
+
+  The following block is writing a material definition into the
+  library.
+#+BEGIN_SRC emacs-lisp
+/mplib,write,/HOME/uidg1626/a-m/matlib
+!! --- It is advisable to make the material files which are commented read only!
+/units,mpa !default extension for mpread/write is now MPA_MPL
+mat,Steel ! set the appropriate material number
+mpwrite
+mplist ! Check
+  #+END_SRC
+
+* Materials defined in ANSYS-Mode's library
+  - 42CrMo4_biso_Rp850.MPA_MPL ::
+  - AlSi9Cu3_biso.MPA_MPL ::
+  - C75s_hardened_kinh.MPA_MPL ::
+  - construction_steel.MPA_MPL ::
+  - copper.MPA_MPL ::
+  - M250-35A_aniso.MPA_MPL ::
+  - M250-35A_biso.MPA_MPL ::
+  - M250-35A_orthotropic_elastic.MPA_MPL ::
+  - M800-65A_biso.MPA_MPL ::
+  - NdFeB_magnet.MPA_MPL ::
+  - PPS_Fortron1140L4_70degC_kinh.MPA_MPL ::
   - PPS.MPA_MPL :: Celanese Fortron 1140L4 40 % glass fibre, Young's
                    modulus 80 % reduced compared to test specimen to
                    replicate a random fibre orientation.
+  - St37_elastic.MPA_MPL ::
+  - St37.MPA_MPL ::
+  - St70_biso.MPA_MPL ::
+  - X46Cr13.MPA_MPL ::
 
+* Other material data
   - creep_curves_PPS_Fortron1140l4_120degC.csv :: A 40 % short glas
        fibre filled PPS.  The stress - creep strain curves are scaled
        with a factor of 0.8 from test specimen to account for a random
        fibre orientation in thick walled parts.  They might be used as
        an example for data fitting with the TBFT command.
 
-
-# local variables:
+# LOCAL variables:
 # word-wrap: t
 # show-trailing-whitespace: t
 # indicate-empty-lines: t
-# mode: org
 # end:
